tdf#121842 sw: add hyperlinks to toxmarks in ToC/User-Defined Index

The toxmark is identified by the type of index, the name of the index
type (only for user-defined; there is only one ToC type), the text
(either text:string-value or text content of the toxmark),
and a counter to distinguish marks with the same text.

Both text and type name can contain arbitrary characters so use U+0019
control character as separator.

Links look like: #1%19text%19Utypename|toxmark

Change-Id: I5aeec727e2cd3a02d676cf3ea4c302bf7c77d319
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/110091
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>